# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/communication/netmanager_base/netmanager_base_config.gni")

ohos_shared_library("net_policy_manager") {
  sources = [
    "$NETPOLICYMANAGER_SOURCE_DIR/src/common/net_policy_event_handler.cpp",
    "$NETPOLICYMANAGER_SOURCE_DIR/src/common/net_policy_service_common.cpp",
    "$NETPOLICYMANAGER_SOURCE_DIR/src/common/netsys_policy_wrapper.cpp",
    "$NETPOLICYMANAGER_SOURCE_DIR/src/core/net_policy_base.cpp",
    "$NETPOLICYMANAGER_SOURCE_DIR/src/core/net_policy_callback.cpp",
    "$NETPOLICYMANAGER_SOURCE_DIR/src/core/net_policy_core.cpp",
    "$NETPOLICYMANAGER_SOURCE_DIR/src/core/net_policy_file.cpp",
    "$NETPOLICYMANAGER_SOURCE_DIR/src/core/net_policy_firewall.cpp",
    "$NETPOLICYMANAGER_SOURCE_DIR/src/core/net_policy_rule.cpp",
    "$NETPOLICYMANAGER_SOURCE_DIR/src/core/net_policy_traffic.cpp",
    "$NETPOLICYMANAGER_SOURCE_DIR/src/firewall_rule/device_idle_firewall_rule.cpp",
    "$NETPOLICYMANAGER_SOURCE_DIR/src/firewall_rule/firewall_rule.cpp",
    "$NETPOLICYMANAGER_SOURCE_DIR/src/net_policy_service.cpp",
    "$NETPOLICYMANAGER_SOURCE_DIR/src/stub/net_policy_callback_proxy.cpp",
    "$NETPOLICYMANAGER_SOURCE_DIR/src/stub/net_policy_service_stub.cpp",
  ]

  include_dirs = [
    "$INNERKITS_ROOT/include",
    "$INNERKITS_ROOT/netpolicyclient/include",
    "$INNERKITS_ROOT/netpolicyclient/include/proxy",
    "$INNERKITS_ROOT/netconnclient/include",
    "$NETCONNMANAGER_COMMON_DIR/include",
    "$NETMANAGER_BASE_ROOT/utils/log/include",
    "$NETPOLICYMANAGER_SOURCE_DIR/include",
    "$NETPOLICYMANAGER_SOURCE_DIR/include/stub",
    "$NETSYSCONTROLLER_ROOT_DIR/include",
    "$SAMGR_MANAGER_ROOT/interfaces/innerkits/samgr_proxy/include",
  ]

  deps = [
    "$INNERKITS_ROOT/netpolicyclient:net_policy_parcel",
    "$NETCONNMANAGER_COMMON_DIR:net_service_common",
    "$NETMANAGER_BASE_ROOT/utils:net_manager_common",
    "$NETSYSCONTROLLER_ROOT_DIR:netsys_controller",
    "$THIRD_PARTY_ROOT/jsoncpp:jsoncpp",
  ]

  external_deps = [
    "ability_base:want",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hitrace_native:hitrace_meter",
    "ipc:ipc_core",
    "netmanager_base:net_stats_manager_if",
    "safwk:system_ability_fwk",
  ]

  defines = [
    "NETMGR_LOG_TAG = \"NetPolicyService\"",
    "LOG_DOMAIN = 0xD0015B0",
  ]

  if (enable_netmgr_debug) {
    defines += [ "NETMGR_DEBUG" ]
  }

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "netmanager_base"
  subsystem_name = "communication"
}
